# call-logger

./: CMakeLists.txt  README
interceptor/: main.c  main.cpp
log-daemon/: LogPrinters.cpp  LogPrinters.h  LogReader.cpp  LogReader.h  ProgramArgs.cpp  ProgramArgs.h  main.cpp
shared-arena/: SharedArena.cpp  SharedArena.h  shared_arena.c  shared_arena.h
test-stand/: main.c
